tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/float/exp-double-us.stderr
TOML parse error at line 1, column 19
  |
1 | exp-double-us = 1e__23
  |                   ^
invalid floating-point number
